@@ -1,0 +1,10 @@
+ALTER TABLE `run_status_dict` \
+DROP KEY `description`, \
+ADD UNIQUE KEY `unique_rstdict_description` (`description`);
+
+ALTER TABLE `run_lane_status_dict` \
+ADD UNIQUE KEY `unique_rlstdict_description` (`description`);
+
+
+ALTER TABLE `instrument_status_dict` \
+ADD UNIQUE KEY `unique_instrdict_description` (`description`);
