@@ -1,82 +1,38 @@
 use strict;
 use warnings;
-
-use English qw(-no_match_vars);
-
 use Test::More tests => 13;
-use Test::Deep;
 use Test::Exception;
-use Test::MockModule;
 
 use t::dbic_util;
 
-use Readonly;
-
-Readonly::Scalar my $ABSURD_ID => 100_000_000;
-
-
 use_ok('npg_tracking::Schema::Result::RunStatusDict');
 
-
 my $schema = t::dbic_util->new->test_schema();
-my $test;
 
-lives_ok { $test = $schema->resultset('RunStatusDict')->new( {} ) }
-         'Create test object';
+my $row = $schema->resultset('RunStatusDict')->find({description => 'analysis in progress'});
+isa_ok ($row, 'npg_tracking::Schema::Result::RunStatusDict');
+is ($row->description, 'analysis in progress', 'correct description');
+is ($row->temporal_index, 240, 'correct temporal index');
 
+my $row1 = $schema->resultset('RunStatusDict')->find({description => 'analysis prelim'});
+ok ($row1, "row corresponding to 'analysis prelim' found");
+is ($row1->temporal_index, undef, 'temporal index is undefined');
 
-throws_ok { $test->check_row_validity() }
-          qr/Argument required/ms,
-          'Exception thrown for no argument supplied';
+throws_ok {$row->compare_to_status_description()}
+  qr/Non-empty status description string required/,
+  'error if argument description is undefined';
+throws_ok {$row->compare_to_status_description(q[])}
+  qr/Non-empty status description string required/,
+  'error if argument description is an empty string';
+throws_ok {$row1->compare_to_status_description('analysis in progress')}
+  qr/Temporal index of this run status description is not defined/,
+  'error if temporal status of this run status description is undefined';
+throws_ok {$row->compare_to_status_description('analysis prelim')}
+  qr/Temporal index of 'analysis prelim' is not defined/,
+  'error if temporal status of this run status description is undefined';
 
-
-is( $test->check_row_validity('run exploded'), undef, 'Invalid description' );
-is( $test->check_row_validity($ABSURD_ID),     undef, 'Invalid id' );
-
-my $row = $test->check_row_validity('run complete');
-
-is(
-    ( ref $row ),
-    'npg_tracking::Schema::Result::RunStatusDict',
-    'Valid description...'
-);
-is( $row->id_run_status_dict(), 4, '...and the correct row' );
-
-
-
-$row = $test->check_row_validity(1);
-
-is(
-    ( ref $row ),
-    'npg_tracking::Schema::Result::RunStatusDict',
-    'Valid id...'
-);
-is( $row->description(), 'run pending', '...and the correct row' );
-
-my $row2 = $test->_insist_on_valid_row(1);
-
-cmp_deeply( $row, $row2, 'Internal method returns same row' );
-
-
-{
-    my $broken_db_test =
-        Test::MockModule->new('DBIx::Class::ResultSet');
-
-    $broken_db_test->mock( count => sub { return 2; } );
-
-    $test = $schema->resultset('RunStatusDict')->new( {} );
-
-    throws_ok { $test->check_row_validity(1) }
-              qr/Panic![ ]Multiple[ ]run_status_dict[ ]rows[ ]found/msx,
-              'Exception thrown for multiple db matches';
-
-    $broken_db_test->mock( count => sub { return 0; } );
-    is( $test->check_row_validity(1), undef, 'Return undef for no matches' );
-
-    throws_ok { $test->_insist_on_valid_row(1) }
-              qr/Invalid[ ]identifier:[ ]1/msx,
-              'Internal validator croaks as it\'s supposed to';
-}
-
+is ($row->compare_to_status_description('qc on hold'), -1, "is less than status 'qc on hold'");
+is ($row->compare_to_status_description('run in progress'), 1, "is more than status 'run in progress'");
+is ($row->compare_to_status_description($row->description), 0, 'is equal to its own status description');
 
 1;
